--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="carousel">
                 <li class="card">
-                    <a class="card-inner" href="web-vida.html">
+                    <a class="card-inner" >
                         <img src="images/WEBVIDA.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -134,13 +134,13 @@
                             </div>
                         </div>
                         <div class="card-back">
-                            <p class="event-description">An ultimate test of web development skills.</p>
+                            <p class="event-description">CODE.CREATE.CONQUER.</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a class="card-inner" href="wit-wars.html">
+                    <a class="card-inner" >
                         <img src="images/WITWARS.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -153,12 +153,12 @@
                             </div>
                         </div>
                         <div class="card-back">
-                            <p class="event-description">A strategic battle to finish.</p>
+                            <p class="event-description">VALOR OF THE WISE</p>
                         </div>
                     </a>
                 </li>
                 <li class="card">
-                    <a class="card-inner" href="overthrone.html">
+                    <a class="card-inner" >
                         <img src="images/Wall.jpg" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -171,12 +171,12 @@
                             </div>
                         </div>
                         <div class="card-back">
-                            <p class="event-description">A battle of intelligence and quick thinking.</p>
+                            <p class="event-description">THE SAGA OF ASCENSION</p>
                         </div>
                     </a>
                 </li>
                 <li class="card">
-                    <a class="card-inner" href="flag-heist.html">
+                    <a class="card-inner" >
                         <img src="images/falg_heist_logo.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                         <div class="card-back">
-                            <p class="event-description">A thrilling game of capture the flag.</p>
+                            <p class="event-description">INFILTRATE THE CRYPTIC VAULT</p>
                         </div>
                     </a>
                 </li>
@@ -388,7 +388,7 @@
                 </div>
 
                 <div class="grid">
-                    <div class="image"><img src="images/YASHITA.png" alt="Yashita Gupta"></div>
+                    <div class="image"><img src="images/yashita.png" alt="Yashita Gupta"></div>
                     <div class="name">
                         <p class="person-name">Yashita Gupta</p>
                         <p class="person-role">Creativity Head</p>
