--- a/wit-wars.html
+++ b/wit-wars.html
@@ -4,68 +4,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wit Wars</title>
+    <title>Web Vida</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="event_page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+    <link rel="stylesheet" href="break.css">
 </head>
 
 <body>
+    <div class="bg-overlay"></div>
+
     <header>
         <div class="header">
             <a class="logo" href=".page-top"><img src="images/ISTE Thapar Chapter Logo white.png" alt="ISTE LOGO"></a>
 
-            <!-- <a class="resume-button" href="register.html" id="nav-button2">
+            <a class="resume-button" href="register.html" id="nav-button2">
                 Register
-            </a> -->
+            </a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
                 <li><a href="home.html" class="link link-theme">HOME</a></li>
                 <li><a href="home.html#wrapper" class="link link-theme">EVENTS</a></li>
-                <li><a href="home.html" class="link link-theme">SPONSORS</a></li>
-                <li><a href="home.html" class="link link-theme">OUR TEAM</a></li>
-                <li><a href="home.html" class="link link-theme">CONTACT</a></li>
-                <!-- <li>
-                    <a class="resume-button" href="register.html" id="nav-button1">
+                <li><a href="home.html#sponsers" class="link link-theme">SPONSORS</a></li>
+                <li><a href="home.html#our-team" class="link link-theme">OUR TEAM</a></li>
+                <li><a href="home.html#footer" class="link link-theme">CONTACT</a></li>
+                <li>
+                    <a class="resume-button" href="register.html" id="nav-button2">
                         Register
                     </a>
-                </li> -->
+                </li>
             </ul>
         </div>
 
         <div id="main" class="main">
-            <section class="intro" id="wit-wars">
+            <section class="intro" id="web-vida">
 
                 <article class="container">
-                    <div>COLLOQUIUM</div>
+                    <img src="logo.png" alt="COLLOQUIUM" height="130px" width="350px">
                     <div class="event-name">
-                        <h1><strong>W</strong>IT</h1>
-                        <h2><strong>W</strong>ARS
+                        <h1><strong>W</strong>it <strong>W</strong>ars</h1>
                     </div>
-                    <div class="date"><span>#</span>18 FEBRUARY 2025</div>
+                    <div class="date"><span>#</span>17 FEBRUARY 2025</div>
                     <div class="about-event">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, tempore voluptatem. Modi fugit
                         dicta harum earum exercitationem vitae repudiandae iste reprehenderit nobis quasi iusto
                         excepturi.
                     </div>
-                    <button class="resume-button">
-                        <img src="images/play_arrow_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="Resume Icon">
+                    <button class="resume-button"  href="register.html" id="nav-button2">
                         Register
-                    </button>
+                    </a>
+                        <!-- <img src="images/play_arrow_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="Resume Icon">
+                        Register
+                    </button> -->
                 </article>
             </section>
+        </div>
+        <div class="rules-book">
+            <div class="rules-header">
+                <h2>RULE BOOK</h2>
+            </div>
+            <div class="rules-content">
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+        
+            </div>
         </div>
     </header>
 
 
 
-    <section class="rules-section">
+    <!-- <section class="rules-section">
         <div class="rules-book">
             <div class="rules-img">
-                <img src="images/120768-1920x1080-desktop-1080p-squid-game-background-image.jpg" alt="image" data-aos="fade-up">
+                <img src="images/breakingbad.jpg" alt="image" data-aos="fade-up">
             </div>
             <div class="rules-header">
                 <h2>RULE BOOK</h2>
@@ -98,7 +133,9 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
+
+
     <div class="footer-basic" id="footer" >
         <footer>
             <div class="contact">
@@ -115,8 +152,8 @@
         </footer>
     </div>
 
-    <div class="particles"></div>
-    <div class="star-background"></div>
+    <!-- <div class="particles"></div>
+    <div class="star-background"></div> -->
 
     <script>
         const particleContainer = document.querySelector('.particles');
