--- a/flag-heist.html
+++ b/flag-heist.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flag Heist</title>
+    <title>Web Vida</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="event_page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+    <link rel="stylesheet" href="break.css">
 </head>
 
 <body>
+    <div class="bg-overlay"></div>
+
     <header>
         <div class="header">
             <a class="logo" href=".page-top"><img src="images/ISTE Thapar Chapter Logo white.png" alt="ISTE LOGO"></a>
@@ -37,15 +39,14 @@
         </div>
 
         <div id="main" class="main">
-            <section class="intro" id="flag-heist">
+            <section class="intro" id="web-vida">
 
                 <article class="container">
-                    <div>COLLOQUIUM</div>
+                    <img src="logo.png" alt="COLLOQUIUM" height="130px" width="350px">
                     <div class="event-name">
-                        <h1><strong>F</strong>LAG</h1>
-                        <h2><strong>H</strong>EIST
+                        <h1><strong>F</strong>lag <strong>H</strong>eist</h1>
                     </div>
-                    <div class="date"><span>#</span>20 FEBRUARY 2025</div>
+                    <div class="date"><span>#</span>17 FEBRUARY 2025</div>
                     <div class="about-event">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, tempore voluptatem. Modi fugit
                         dicta harum earum exercitationem vitae repudiandae iste reprehenderit nobis quasi iusto
@@ -58,14 +59,46 @@
                 </article>
             </section>
         </div>
+        <div class="rules-book">
+            <div class="rules-header">
+                <h2>RULE BOOK</h2>
+            </div>
+            <div class="rules-content">
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+                <div class="rules" data-aos="fade-up">
+                    <h3>RULE NO 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, possimus voluptatem laborum
+                        assumenda tempora quidem deleniti veritatis dolore excepturi quo facilis obcaecati consectetur a
+                        blanditiis debitis, quas incidunt numquam illo voluptates ipsum. Ratione, aut.</p>
+                </div>
+        
+            </div>
+        </div>
     </header>
 
 
 
-    <section class="rules-section">
+    <!-- <section class="rules-section">
         <div class="rules-book">
             <div class="rules-img">
-                <img src="images/money-heist 1.jpg" alt="image" data-aos="fade-up">
+                <img src="images/breakingbad.jpg" alt="image" data-aos="fade-up">
             </div>
             <div class="rules-header">
                 <h2>RULE BOOK</h2>
@@ -98,7 +131,9 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
+
+
     <div class="footer-basic" id="footer" >
         <footer>
             <div class="contact">
@@ -115,8 +150,8 @@
         </footer>
     </div>
 
-    <div class="particles"></div>
-    <div class="star-background"></div>
+    <!-- <div class="particles"></div>
+    <div class="star-background"></div> -->
 
     <script>
         const particleContainer = document.querySelector('.particles');
