--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </li>
                 <li class="card">
                     <a class="card-inner" >
-                        <img src="images/Wall.jpg" alt="">
+                        <img src="images/OVERTHRONE.png"  alt="">
                         <div class="card-front">
                             <div class="card-header">
                                 <div id="XI">XI</div>
@@ -177,7 +177,7 @@
                 </li>
                 <li class="card">
                     <a class="card-inner" >
-                        <img src="images/falg_heist_logo.png" alt="">
+                        <img src="images/FLAGHEIST.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
                                 <div id="XI">XI</div>
