--- a/register.html
+++ b/register.html
@@ -57,12 +57,13 @@
                 members,
                 timestamp: new Date().toISOString()
             }).then(() => {
-                alert("Registration successful!");
-            }).catch((error) => {
-                console.error("Error saving data: ", error);
-                alert("Error registering. Try again.");
-            });
-        });
+        alert("Registration successful!");
+        window.location.href = "index.html"; // Redirect to home page
+    }).catch((error) => {
+        console.error("Error saving data: ", error);
+        alert("Error registering. Try again.");
+    });
+});
     </script>
     
 </head>
