--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="carousel">
                 <li class="card">
-                    <a class="card-inner" >
+                    <a class="card-inner" href="web-vida.html">
                         <img src="images/WEBVIDA.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -139,35 +139,18 @@
                     </a>
                 </li>
 
+                
                 <li class="card">
-                    <a class="card-inner" >
-                        <img src="images/WITWARS.png" alt="">
+                    <a class="card-inner" href="overthrone.html" >
+                        <img src="images/OVERTHRONE.png"  alt="">
                         <div class="card-front">
                             <div class="card-header">
                                 <div id="XI">XI</div>
                                 <div id="Day">DAY-2</div>
                             </div>
                             <div class="card-footer">
-                                <div class="card-title">Wit Wars</div>
-                                <span class="card-date">18 FEB</span>
-                            </div>
-                        </div>
-                        <div class="card-back">
-                            <p class="event-description">VALOR OF THE WISE</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="card">
-                    <a class="card-inner" >
-                        <img src="images/OVERTHRONE.png"  alt="">
-                        <div class="card-front">
-                            <div class="card-header">
-                                <div id="XI">XI</div>
-                                <div id="Day">DAY-3</div>
-                            </div>
-                            <div class="card-footer">
                                 <div class="card-title">Overthrone</div>
-                                <span class="card-date">19 FEB</span>
+                                <span class="card-date">18 FEB</span>
                             </div>
                         </div>
                         <div class="card-back">
@@ -176,7 +159,25 @@
                     </a>
                 </li>
                 <li class="card">
-                    <a class="card-inner" >
+                    <a class="card-inner" href="wit-wars.html" >
+                        <img src="images/WITWARS.png" alt="">
+                        <div class="card-front">
+                            <div class="card-header">
+                                <div id="XI">XI</div>
+                                <div id="Day">DAY-3</div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-title">Wit Wars</div>
+                                <span class="card-date">19 FEB</span>
+                            </div>
+                        </div>
+                        <div class="card-back">
+                            <p class="event-description">VALOR OF THE WISE</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="card">
+                    <a class="card-inner" href="flag-heist.html" >
                         <img src="images/FLAGHEIST.png" alt="">
                         <div class="card-front">
                             <div class="card-header">
@@ -214,7 +215,22 @@
                     <img src="images/mentor.jpeg" alt="Sponsor 3 Logo" class="sponsor-logo">
                     <p class="description">Our mentoring Partner</p>
                 </div>
-                
+                <div class="sponsor">
+                    <img src="images/logo-4.jpg" alt="Sponsor 4 Logo" class="sponsor-logo">
+                    <p class="description">AI Image Sponsor</p>
+                </div>
+                <div class="sponsor">
+                    <img src="images/logo-5.jpg" alt="Sponsor 5 Logo" class="sponsor-logo">
+                    <p class="description">Stock Learning Partner</p>
+                </div>
+                <div class="sponsor">
+                    <img src="images/logo-6.jpg" alt="Sponsor 6 Logo" class="sponsor-logo">
+                    <p class="description">Domain Sponsor</p>
+                </div>
+                <div class="sponsor">
+                    <img src="images/logo-7.jpg" alt="Sponsor 7 Logo" class="sponsor-logo">
+                    <p class="description">Interview Sponsor</p>
+                </div>
             </div>
         </div>
     </div>
@@ -255,7 +271,7 @@
                 </div>
                 <div class="grid">
                     <div class="image">
-                        <img src="images/haryiank.png" alt="Haryiank Kumar" />
+                        <img src="images/haryiank.png" alt="Haryiank Kumra" />
                     </div>
                     <div class="name">
                         <p>Haryiank Kumar</p>
