--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@
                     <img src="images/logo-7.jpg" alt="Sponsor 7 Logo" class="sponsor-logo">
                     <p class="description">Interview Sponsor</p>
                 </div>
+                <div class="sponsor">
+                    <img src="images/cake.png" alt="Sponsor Logo" class="sponsor-logo">
+                    <p class="description">Cake Partner</p>
+                </div>
+                <div class="sponsor">
+                    <img src="images/oatley.jpg" alt="Sponsor 7 Logo" class="sponsor-logo">
+                    <p class="description">Health and Sustainability Partner</p>
+                </div>
             </div>
         </div>
     </div>
