--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h1 class="title">OUR SPONSORS</h1>
             <div class="sponsors-grid">
                 <div class="sponsor">
-                    <img src="images/title.png" alt="Sponsor 1 Logo" class="sponsor-logo">
+                    <img src="images/bm.jpg" alt="Sponsor 1 Logo" class="sponsor-logo">
                     <p class="description">Title Sponsor</p>
                 </div>
                 <div class="sponsor">
