--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
                     <p class="description">Health and Sustainability Partner</p>
                 </div>
                 <div class="sponsor">
+                    <img src="images/echoes.jpg" alt="Sponsor  Logo" class="sponsor-logo">
+                    <p class="description">Research and Development</p>
+                </div>
+
+                <div class="sponsor">
                     <img src="images/ai.png" alt="Sponsor 2 Logo" class="sponsor-logo">
                     <p class="description">AI Partner</p>
                 </div>
@@ -227,10 +232,10 @@
                     <img src="images/mentor.jpeg" alt="Sponsor 3 Logo" class="sponsor-logo">
                     <p class="description">Our mentoring Partner</p>
                 </div>
-                <div class="sponsor">
+                <!-- <div class="sponsor">
                     <img src="images/logo-4.jpg" alt="Sponsor 4 Logo" class="sponsor-logo">
                     <p class="description">AI Image Sponsor</p>
-                </div>
+                </div> -->
                 <div class="sponsor">
                     <img src="images/logo-5.jpg" alt="Sponsor 5 Logo" class="sponsor-logo">
                     <p class="description">Stock Learning Partner</p>
@@ -319,6 +324,23 @@
                         <p>Documentation Head</p>
                     </div>
                 </div>
+                <div class="grid">
+                    <div class="image"><img src="images/TANISHQ.jpg" alt="Tanishq Soni"></div>
+                    <div class="name">
+                        <p class="person-name">Tanishq Soni</p>
+                        <p class="person-role">Logistics Head</p>
+                    </div>
+                </div>
+
+                <div class="grid">
+                    <div class="image"><img src="images/DIXANT.jpg" alt="Dixant"></div>
+                    <div class="name">
+                        <p class="person-name">Dixant</p>
+                        <p class="person-role">Logistics Head</p>
+                    </div>
+                </div>
+
+            </div>
                 <div class="grid">
                     <div class="image"><img src="images/lakshita.png" alt="Lakshita Gupta"></div>
                     <div class="name">
@@ -433,23 +455,7 @@
                     </div>
                 </div>
 
-                <div class="grid">
-                    <div class="image"><img src="images/TANISHQ.jpg" alt="Tanishq Soni"></div>
-                    <div class="name">
-                        <p class="person-name">Tanishq Soni</p>
-                        <p class="person-role">Logistics Head</p>
-                    </div>
-                </div>
-
-                <div class="grid">
-                    <div class="image"><img src="images/DIXANT.jpg" alt="Dixant"></div>
-                    <div class="name">
-                        <p class="person-name">Dixant</p>
-                        <p class="person-role">Logistics Head</p>
-                    </div>
-                </div>
-
-            </div>
+                
             <button class="arrow arrow-right">&#10095;</button>
         </div>
     </div>
