--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="sponsor">
                     <img src="images/echoes.jpg" alt="Sponsor  Logo" class="sponsor-logo">
-                    <p class="description">Research and Development</p>
+                    <p class="description">Event Partner</p>
                 </div>
 
                 <div class="sponsor">
